# news48

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  config.py  count_statuses.py  database.py  docker-compose.external-llm.yml  docker-compose.jetson.yml  docker-compose.no-llamacpp.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  main.py  models.py  pyproject.toml  run.website.sh  seed.txt
.github/workflows/: ci.yml  docker.yml
.scoring/: latest-assessment.json
agents/: __init__.py  _run.py  actors.py  broker.py  checker.py  cli_operator.py  dashboard.py  executor.py  fact_checker.py  middleware.py  monitor.py  operator.py  orchestrator.py  parser.py  pipeline.py  planner.py  reporter.py  schedules.py  sentinel.py  streaming.py  workers.py
agents/instructions/: __init__.py  checker.md  cli-operator.md  cli-reference.md  executor.md  fact_checker.md  monitor.md  operator.md  parser.md  pipeline.md  planner.md  reporter.md  sentinel.md
agents/skills/: __init__.py
agents/skills/executor/: add-steps.md  business-logic.md  claim-plan.md  manage-steps.md  run-cleanup.md  run-command.md  run-db-health.md  run-fact-check.md  run-feed-health.md  run-retry.md  run-waves.md  verify-plan.md
agents/skills/fact_checker/: business-logic.md  extract-claims.md  record-verdict.md  search-evidence.md
agents/skills/monitor/: begin-monitoring-cycle.md  business-logic.md  check-disk-space.md  classify-status.md  compute-rates.md  evaluate-thresholds.md  generate-alerts.md  recommend-actions.md  review-fact-check.md  send-email.md  write-metrics-history.md  write-monitor-report.md
agents/skills/parser/: adapt-to-type.md  business-logic.md  enforce-quality.md  extract-facts.md  normalize-fields.md  (+5 more)
agents/tools/: __init__.py  _helpers.py  bypass.py  email.py  files.py  lessons.py  planner.py  searxng.py  sentinel.py  shell.py  system.py
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_initial_schema.py
commands/: __init__.py  _common.py  agents.py  articles.py  cleanup.py  download.py  fact_check.py  feeds.py  fetch.py  fetches.py  lessons.py  logs.py  parse.py  plans.py  runs.py  search.py  seed.py  sitemap.py  stats.py
database/: __init__.py  articles.py  claims.py  connection.py  feeds.py  fetches.py  models.py  retention.py
docs/: agents-tools-inventory.md  autonomous-operation-score.md  cli-testing-guide.md  deployment.md  mcp-tools.md  proposed-homepage-filters.md  workflow-guide.md
helpers/: __init__.py  bypass.py  feed.py  llm.py  seo.py  url.py
llamacpp/: README.md  entrypoint.sh
news48/: __init__.py
news48/cli/: __init__.py  main.py
news48/core/: __init__.py  config.py  models.py
news48/mcp/: __init__.py  server.py  tools.py
news48/web/: app.py  helpers.py  llms.txt
plans/: cli-agent-implementation-spec.md  cli-agent-plan.md
scripts/: docker-entrypoint.sh  download-model.sh  export_sqlite_data.py  import_mysql_data.py  install.sh  llamacpp-entrypoint.sh  run-website.sh  update.sh
searxng/: settings.yml
tests/: conftest.py  test_agents.py  test_article_extraction.py  test_article_validation.py  test_database_claims.py  test_dramatiq_actors.py  test_dramatiq_integration.py  test_lessons.py  test_logs_command.py  test_mcp_tools.py  test_planner_tools.py  test_plans_command.py  test_shell_tool.py  test_skills.py  test_streaming.py  test_strip_html.py  test_tools.py
web/: app.py  helpers.py
web/static/: style.css
web/templates/: article.html  base.html  category.html  cluster.html  index.html
(+167 files in other folders)
