[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "news48"
description = "Add your description here"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dateparser",
    "feedparser",
    "html-to-markdown",
    "httpx",
    "llama-index-llms-openai-like",
    "loguru",
    "pydantic",
    "python-dotenv",
    "rich",
    "typer",
    "Jinja2",
    "fastapi",
    "uvicorn",
    "dramatiq",
    "periodiq",
    "redis",
    "SQLAlchemy",
    "alembic",
    "mysql-connector-python",
]

[project.scripts]
news48 = "main:main"

[tool.setuptools]
packages = ["agents", "commands", "database", "helpers", "web", "news48"]
py-modules = ["config", "models", "main"]

[tool.setuptools.dynamic]
version = { attr = "news48.__version__" }

[tool.uv]
package = true

[dependency-groups]
web = [
    "fastapi",
    "uvicorn",
    "Jinja2",
    "python-dotenv",
    "sqlalchemy",
    "mysql-connector-python",
    "alembic",
]
dev = ["black", "isort", "pytest"]
