[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "news48"
description = "Autonomous news ingestion and verification pipeline with AI agents"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies (always installed)
    "pydantic",
    "python-dotenv",
    "loguru",
    "SQLAlchemy",
    "alembic",
    "mysql-connector-python",
]

[project.optional-dependencies]
cli = [
    "typer",
    "rich",
    "feedparser",
    "dateparser",
    "httpx",
    "html-to-markdown",
    "llama-index-llms-openai-like",
    "dramatiq",
    "periodiq",
    "redis",
    "mcp[cli]",
]
web = [
    "fastapi",
    "uvicorn",
    "Jinja2",
    "mcp",
    "redis",
]
all = ["news48[cli,web]"]

[project.scripts]
news48 = "news48.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["news48*"]

[tool.setuptools.package-data]
"news48.core.agents" = ["instructions/**/*.md", "skills/**/*.md"]
"news48.web" = ["static/**/*", "templates/**/*"]

[tool.setuptools.dynamic]
version = { attr = "news48.__version__" }

[tool.uv]
package = true

[dependency-groups]
dev = ["black", "isort", "pytest"]
